<resources>
    <string name="app_name">شركة رينو المتحدة المحدودة</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_userName_hint">البريد الألكترونى</string>
    <string name="login_password_hint">كلمة المرور</string>
    <string name="forgot_password">استعادة كلمة المرور؟</string>
    <string name="privacy_policy">سياسة الخصوصية والدعم الفنى</string>
    <string name="success_login">تم تسجيل الدخول بنجاح</string>
    <string name="invalid_email_or_pass">خطأ فى البريد الكترونى او كلمة المرور </string>
    <string name="required_field">مطلوب  </string>
    <string name="email_must_less_than50">البريد الاكتروني يجيب الا يزيد عن 50 حرف </string>
    <string name="invalid_email">بريد الكترونى خاطئ </string>
    <string name="dismiss">تجاهل</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">الخدمات الرئيسية</string>
    <string name="requests">الطلبات</string>
    <string name="statistics">الاحصائيات</string>
    <string name="history">تاريخ الطلبات</string>
    <string name="search_hint"> ابحث برقم الطلب أو بنص </string>
    <string name="hr_clearance">اخلاء الطرف</string>
    <string name="payment_process">المدفوعات المالية</string>
    <string name="notification">تنبيهات الاداره العليا</string>

    <string name="order_number">رقم الطلب</string>
    <string name="order_date"> تاريخ الطلب</string>
    <string name="side">الجهة</string>
    <string name="amount">المبلغ</string>
    <string name="balance">الرصيد</string>
    <string name="payment_method">طريقه الدفع</string>
    <string name="order_status">حاله الطلب</string>
    <string name="forword_to_me">محال الى</string>
    <string name="description">الوصف</string>
    <string name="order_side">جهة الطلب</string>

    <string name="payment_limit">الحد الائتماني</string>
    <string name="approve_head_department">اعتماد رئيس القسم</string>
    <string name="denay">رفض الطلب</string>
    <string name="beneficiary_clause">بند المستفيد</string>
    <string name="provision">المخصص</string>

    <string name="request_num">رقم الطلب</string>
    <string name="rqust_date">تاريخ الطلب</string>
    <string name="request_amount">المبلغ</string>
    <string name="request_agency">الجهة</string>

    <string name="requst_status">حالة الطلب</string>
    <string name="show_all">عرض الكل</string>
    <string name="request_to">محال الى</string>
    <string name="cash">كاش</string>
    <string name="task">طلب</string>
    <string name="me">المحال الي</string>
    <string name="others">الاخري</string>
    <string name="no_data">"لا توجد بيانات فى هذة الفترة  "</string>

    <string name="employee_number">رقم الموظف</string>
    <string name="employee_name">اسم الموظف</string>
    <string name="office">الادارة</string>
    <string name="action">الاجراء المعتمد</string>
    <string name="type">نوع المخالصة</string>

    <string name="clearance_num">رقم المخالصة</string>
    <string name="emp_num">رقم الموظف</string>
    <string name="emp_name">أسم الموظف</string>
    <string name="department">الادارة</string>
    <string name="clearance_status">الاجراء المعتمد</string>
    <string name="request_type">نوع المخالصة</string>
    <string name="vacation_start">بداية الاجازة</string>
    <string name="vacation_end">نهاية الاجازة</string>

    <string name="add_attachment">اضافه مرفقات</string>
    <string name="see_attachments">عرض المرفقات</string>
    <string name="approve_request_number">هل تريد اعتماد الطلب رقم</string>
    <string name="deny_request_number">هل تريد رفض الطلب رقم</string>
    <string name="approve_with_attachments">الاعتماد بمرفقات </string>
    <string name="approve_without_attachments">الاعتماد بدون مرفقات</string>
    <string name="cancel">الغاء</string>
    <string name="deny_with_attachments">الرفض بمرفقات</string>
    <string name="deny_without_attachments">الرفض بدون مرفقات</string>

    <string name="attatchment">المرفقات</string>
    <string name="approve_msg">تم قبول الطلب</string>
    <string name="deny_msg">تم رقض الطلب</string>
    <string name="view_attachment">عرض المرفقات</string>
    <string name="details">تفاصيل المخالصة</string>
    <string name="exit_msg">اذا كنت تريد الخروج من التطبيق اضغط على زر الرجوع مره اخرى</string>
    <string name="attachments">المرفقات</string>
    <string name="userName">اسم المستخدم</string>
    <string name="date_posted">تاريخ الانشاء</string>
    <string name="job_title">الوظيفة</string>
    <string name="create_attachment">اضافه مرفقات</string>
    <string name="qrCode_must_4number">الكود ا لتفعيلى يجب ان يحتوى على 4 ارقام</string>
    <string name="weak_password">كلمة المرور ضعيفة</string>
    <string name="pass_not_matched">كلمة المرور غير متطابقة</string>
    <string name="reset_password_hint">كلمة المرور الجديدة</string>
    <string name="reset_confirm_password_hint">تأكيد كلمة المرور الجديدة</string>
    <string name="code">كود التفعيل</string>
    <string name="saveNewPaswword">حفظ كلمة المرور الجديدة</string>
    <string name="request_otp_Code">ارسال الكود التفعيلى</string>
    <string name="notifications">الاشعارات</string>
    <string name="logout">تسجيل خروج</string>
    <string name="edit_profile">اعدادات الحساب</string>
    <string name="complaints">الشكاوى والمقترحات</string>
    <string name="setting">الحساب الشخصى</string>
    <string name="department_txt">الادارة المختصة</string>
    <string name="notes">الشكاوى والمقرحات</string>
    <string name="send">ارسال</string>
    <string name="administrator">المسئول</string>
    <string name="complaint_id">رقم الشكوى</string>
    <string name="add_complaint">اضافه شكوى</string>
    <string name="payment_archive">كشف الحركات المالية</string>
    <string name="move_num">رقم الحركة</string>
    <string name="realAmount">المبلغ الاصلى</string>
    <string name="updateAmount">المبلغ الجديد</string>
    <string name="differance">الفرق</string>
    <string name="email">البريد الالكتروني</string>
    <string name="last_login">تاريخ اخر تسجيل دخول</string>
    <string name="phone_num">رقم الهاتف</string>
    <string name="details_request">تفاصيل الطلب</string>
    <string name="request_details">تفاصيل الطلب</string>
    <string name="chars">حرف(500)</string>
    <string name="update_amount">تعديل المبلغ</string>
    <string name="NoMessage">الغاء</string>
    <string name="yesMessage">تأكيد</string>
    <string name="increase_amount">"هل تريد زيادة قيمة المبلغ من "</string>
    <string name="empty_data">لا توجد بيانات</string>
    <string name="changePassword">تغيير كلمة المرور</string>
    <string name="old_password_hint">كلمة المرور الحالية</string>
    <string name="oldPassword_and_newPassword_are_the_same">كلمتا المرور متطابقتان</string>
    <string name="must_be_less_than_500">النص يجب الا يحتوي علي اكثر من500 حرف</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="timeout_msg">حدث خطأ برجاء اعادة المحاولة</string>
    <string name="server_error_msg">"حدث خطأ بالاتصال بالسرفر برجاء اعادة المحاولة "</string>
    <string name="request_type_alerts">نوع الطلب</string>
    <string name="dialogMessage">هل تريد حذف هذا الملف؟</string>

</resources>