<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingLayout"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
    android:layout_marginTop="@dimen/paddingLayout"
        android:textColor="@color/brown"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hr_clearance_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/color_orange"
        android:text="@string/hr_clearance"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_header_text"
        android:textStyle="bold"
        android:layout_margin="@dimen/paddingLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payment_process_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_orange"
        android:layout_margin="@dimen/paddingLayout"
        android:text="@string/payment_process"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_header_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/hr_clearance_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notification_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_orange"
        android:layout_margin="@dimen/paddingLayout"
        android:text="@string/notification"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_header_text"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/hr_clearance_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>