<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <FrameLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_transperant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" >

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/paddingLayout">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                android:layout_marginTop="10dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brown"
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    app:endIconDrawable="@drawable/ic_baseline_email_24"
                    app:endIconMode="custom"
                    android:hint="@string/login_userName_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/sub_header_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                app:errorEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/sub_header_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/resetPass_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:padding="@dimen/paddingText"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"
                android:textSize="@dimen/normal_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@color/color_orange"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_header_text"
                android:textStyle="bold" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dont_have_account_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:padding="@dimen/paddingText"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text" />

                <TextView
                    android:id="@+id/privacyPolicy_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/brown"                    android:textSize="@dimen/normal_text" />
            </LinearLayout>


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:foregroundGravity="center"
                android:visibility="gone" />
            ..
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>